Edit cards display on medium and h1 size on between-large to prevent overlap

--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -15,9 +15,14 @@ $secondary-font: 'Noto Sans', serif;
   font-weight: $bold;
   line-height: 1.2;
 
+  @include breakpoint($between-large) {
+    font-size: 60px;
+  }
+
   @include breakpoint($medium-only) {
     font-size: 60px;
   }
+
   @include breakpoint($small-only) {
     font-size: 2.7rem;
   }
@@ -29,6 +34,7 @@ $secondary-font: 'Noto Sans', serif;
   font-size: 50px;
   font-weight: $bold;
   line-height: 1.2;
+
   @include breakpoint($small-only) {
     font-size: 2.4rem;
   }
